--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,55 @@
     overflow: hidden;
     @include transition($transition-collapse);
 } */
+
+.navbar-toggler-icon{
+  background-color: transparent !important;
+}
+#color button :hover, #color :focus, #color button :active{
+  background-color: transparent !important;
+}
+
+#color a :focus {
+  background-color: white !important;
+}
+
+.welcome-hero:before {
+  position: absolute;
+  content: " ";
+  top: 0;
+  left: 0;
+  background: rgba(31,44,108,.65);
+  width: 100%;
+  height: 100%;
+}
+
+ีul.timeline-3 {
+  list-style-type: none;
+  position: relative;
+}
+ul.timeline-3:before {
+  content: " ";
+  background: #d4d9df;
+  display: inline-block;
+  position: absolute;
+  left: 29px;
+  width: 2px;
+  height: 100%;
+  z-index: 400;
+}
+ul.timeline-3 > li {
+  margin: 20px 0;
+  padding-left: 20px;
+}
+ul.timeline-3 > li:before {
+  content: " ";
+  background: white;
+  display: inline-block;
+  position: absolute;
+  border-radius: 50%;
+  border: 3px solid #22c0e8;
+  left: 20px;
+  width: 20px;
+  height: 20px;
+  z-index: 400;
+}
